[package]
name = "blog_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
gloo = "0.6.1"
serde = "1.0.136"
serde_json = "1.0.79"
wasm-bindgen = "0.2.79"
web-sys = { version= "0.3.56" , features = ["HtmlInputElement"] }
