[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Framework
axum = { version = "0.7.0", features = ["macros"] }

## Tokio & Tower
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["trace", "cors", "fs"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

## Date & time
# chrono = "0.4.23"

## Struct/Extractor validator
validator = { version = "0.16.0", features = ["derive"] }

# Uuid v4
uuid = { version = "1.4.1", features = ["v4"] }

# ENV Variables
dotenvy = "0.15.6"

# ORM
# sea-orm = { version = "0.12.7", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Templating
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
