[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yewdux = "0.9"
gloo = "0.8.1"
serde = "1.0.136"
serde_json = "1.0.79"
wasm-bindgen = "0.2.79"
web-sys = { version= "0.3.56", features = ["HtmlInputElement"] }
yew-router = "0.17.0"
yew_icons = { version = "0.7", features = [
    "BootstrapSunFill",
    "BootstrapMoonFill",
    "FontAwesomeSolidSun",
    "BootstrapGithub",
    "FontAwesomeSolidArrowRight"
] }
# futere if blog
# implicit-clone = { version = "0.3.5"}
